環境変数を Ktor の設定から読むように変更